--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
+    "node": "^15.8.0",
     "uniqid": "^5.2.0"
   }
 }
