--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Cariny Perez",
   "license": "ISC",
+  "engines": {
+    "node": "14.15.1",
+    "npm": "7.5.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
@@ -22,7 +26,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
-    "node": "^15.8.0",
     "uniqid": "^5.2.0"
   }
 }
